--- a/upload-server/internal/ui/upload.tmpl
+++ b/upload-server/internal/ui/upload.tmpl
@@ -191,6 +191,6 @@
     const uploadUrl = "{{.UploadUrl}}";
     const uploadStatus = "{{.UploadStatus}}";
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/tus-js-client@latest/dist/tus.js"></script>
-  <script src="/assets/tusclient.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/tus-js-client@latest/dist/tus.js"></script>
+  <script type="text/javascript" src="/assets/tusclient.js"></script>
 </html>
